--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.19.2",
     "langchain": "^0.2.17",
     "mongodb": "^6.8.0",
+    "nodemailer": "^6.9.16",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.1",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
